syntax = "proto3";

package main;

option go_package = "github.com/your-username/your-repo/examplepb;examplepb";

// ExampleService defines the gRPC service.
service ExampleService {
  rpc UnaryExample(ExampleRequest) returns (ExampleResponse);
  rpc StreamExample(stream ExampleRequest) returns (stream ExampleResponse);
}

// ExampleRequest is the request message.
message ExampleRequest {
  string message = 1;
}

// ExampleResponse is the response message.
message ExampleResponse {
  string message = 1;
}
